--- a/less/mixins.less
+++ b/less/mixins.less
@@ -140,8 +140,7 @@
 .font-shadow(@font-shadow-x: 1px;@font-shadow-y: 1px;@font-shadow-blur: 5px;@font-shadow-color: black) {
   text-shadow: @font-shadow-x @font-shadow-y @font-shadow-blur @font-shadow-color;
 }
-.box-shadow(@box-shadow-x: 1px;@box-shadow-y: 1px;@box-shadow-blur: 5px;@box-shadow-color: black) {
-  box-shadow: @box-shadow-x @box-shadow-y @box-shadow-blur @box-shadow-color;
+.box-shadow(@box-shadow-x: 0px;@box-shadow-y: 6px;@box-shadow-blur: 20px;@box-shadow-spread: 3px;@box-shadow-color: @dark) {
+  box-shadow: @box-shadow-x @box-shadow-y @box-shadow-blur @box-shadow-spread @box-shadow-color;
 }
-
 
