--- a/css/index.css
+++ b/css/index.css
@@ -140,6 +140,7 @@ table {
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 html,
 body {
@@ -221,6 +222,9 @@ p {
 .centered {
   float: none;
   margin: 0 auto;
+}
+.display-none {
+  display: none;
 }
 nav {
   width: 100%;
@@ -371,7 +375,7 @@ html {
   margin: 0 auto;
   border-left: 5px solid #AE4110;
   padding-right: 10px;
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.75);
+  box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.75);
 }
 @media (min-width: 0px) and (max-width: 600px) {
   .landing-page .splash .tagline h2 {
@@ -397,7 +401,7 @@ html {
   cursor: pointer;
   border-left: 5px solid #AE4110;
   padding-right: 10px;
-  box-shadow: 1px 1px 5px black;
+  box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.75);
   z-index: 1;
 }
 .landing-page .splash .btn:hover {
@@ -425,7 +429,7 @@ section a.divider .leading-arrow {
   margin: -27px auto;
   border-radius: 28px;
   border: 2px solid #18140f;
-  z-index: 3;
+  z-index: 5;
 }
 section a.divider .leading-arrow:hover {
   transform: scale(1.25);
@@ -444,6 +448,8 @@ section a.divider .leading-arrow:hover {
   color: #ffffff;
   position: relative;
   padding: 10% 20%;
+  box-shadow: 0px 6px 20px 3px #232323;
+  z-index: 4;
 }
 @media (min-width: 0px) and (max-width: 600px) {
   .home .luncher-info {
@@ -494,9 +500,6 @@ section a.divider .leading-arrow:hover {
   }
 }
 .home .luncher-info .grid {
-  display: grid;
-  grid-template-columns: 10% 80% 10%;
-  grid-gap: 50px 0px;
   max-width: 800px;
   margin: 0 auto;
 }
@@ -506,33 +509,44 @@ section a.divider .leading-arrow:hover {
     grid-gap: 10px 10px;
   }
 }
-.home .luncher-info .grid p {
+.home .luncher-info .grid .icon-slider {
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
+  grid-gap: 50px 0px;
+}
+.home .luncher-info .grid .icon-slider p {
   align-self: center;
 }
-.home .luncher-info .grid .icon-left {
+.home .luncher-info .grid .icon-slider .icon-left {
   font-size: 6rem;
   grid-column: 1;
   text-align: center;
+  left: -1000px;
+  position: relative;
+  transition-duration: 1s;
 }
 @media (min-width: 0px) and (max-width: 600px) {
-  .home .luncher-info .grid .icon-left {
+  .home .luncher-info .grid .icon-slider .icon-left {
     font-size: 3rem;
     grid-column: 1;
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
-  .home .luncher-info .grid .icon-left {
+  .home .luncher-info .grid .icon-slider .icon-left {
     font-size: 4rem;
   }
 }
-.home .luncher-info .grid .text-right {
+.home .luncher-info .grid .icon-slider .text-left {
   font-size: 2.2rem;
   margin-left: 20px;
   grid-column: span 2;
   text-align: left;
+  left: -10000px;
+  position: relative;
+  transition-duration: 1s;
 }
 @media (min-width: 0px) and (max-width: 600px) {
-  .home .luncher-info .grid .text-right {
+  .home .luncher-info .grid .icon-slider .text-left {
     font-size: 1.4rem;
     grid-column: 1;
     padding-bottom: 20px;
@@ -540,34 +554,40 @@ section a.divider .leading-arrow:hover {
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
-  .home .luncher-info .grid .text-right {
+  .home .luncher-info .grid .icon-slider .text-left {
     font-size: 2rem;
   }
 }
-.home .luncher-info .grid .icon-right {
+.home .luncher-info .grid .icon-slider .icon-right {
   font-size: 6rem;
   grid-column: 3;
   text-align: center;
+  right: -1000px;
+  position: relative;
+  transition-duration: 1s;
 }
 @media (min-width: 0px) and (max-width: 600px) {
-  .home .luncher-info .grid .icon-right {
+  .home .luncher-info .grid .icon-slider .icon-right {
     font-size: 3rem;
     grid-column: 1;
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
-  .home .luncher-info .grid .icon-right {
+  .home .luncher-info .grid .icon-slider .icon-right {
     font-size: 4rem;
   }
 }
-.home .luncher-info .grid .text-left {
+.home .luncher-info .grid .icon-slider .text-right {
   font-size: 2.2rem;
   margin-right: 20px;
   grid-column: span 2;
   text-align: right;
+  right: -10000px;
+  position: relative;
+  transition-duration: 1s;
 }
 @media (min-width: 0px) and (max-width: 600px) {
-  .home .luncher-info .grid .text-left {
+  .home .luncher-info .grid .icon-slider .text-right {
     font-size: 1.4rem;
     grid-column: 1;
     padding-bottom: 20px;
@@ -575,17 +595,17 @@ section a.divider .leading-arrow:hover {
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
-  .home .luncher-info .grid .text-left {
+  .home .luncher-info .grid .icon-slider .text-right {
     font-size: 2rem;
   }
 }
 .home .school-map {
-  background-color: #E5DABD;
-  color: #AE4110;
+  background-color: #81905A;
+  color: #18140f;
   position: relative;
   padding: 5% 0 0 0;
   z-index: 3;
-  box-shadow: 1px 1px 5px black;
+  box-shadow: 0px 6px 20px 3px #232323;
 }
 .home .school-map h3 {
   text-align: center;
@@ -601,6 +621,11 @@ section a.divider .leading-arrow:hover {
   margin-top: 20px;
   height: 400px;
   font-size: 1rem;
+  opacity: 0.65;
+}
+.home .school-map .map:hover {
+  opacity: 1;
+  transition-duration: 0.33s;
 }
 .home .newsletter {
   background-image: url("../assets/img/Fruit-bar-pic-Web-USDAgov.jpg");
@@ -610,8 +635,8 @@ section a.divider .leading-arrow:hover {
   background-attachment: fixed;
   position: relative;
   z-index: 2;
-  box-shadow: 1px 1px 5px black;
-  color: #763C22;
+  box-shadow: 0px 6px 20px 3px #232323;
+  color: #AE4110;
 }
 .home .newsletter .newsletter-overlay {
   background: linear-gradient(rgba(229, 218, 189, 0.95), rgba(157, 106, 79, 0.75));
@@ -650,6 +675,7 @@ section a.divider .leading-arrow:hover {
   cursor: pointer;
   border-left: 5px solid #AE4110;
   padding-right: 10px;
+  box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.75);
   z-index: 1;
 }
 .home .newsletter .newsletter-overlay form .container-form .btn:hover {
@@ -669,7 +695,9 @@ section a.divider .leading-arrow:hover {
   max-width: 600px;
   padding: 12px;
   margin: 8px 0;
-  border: 1px solid #ccc;
+  border: 0;
+  border-left: 5px solid #AE4110;
+  padding-right: 10px;
 }
 @media (min-width: 0px) and (max-width: 600px) {
   .home .newsletter .newsletter-overlay form .container-form input[type=text] {
@@ -835,7 +863,7 @@ section a.divider .leading-arrow {
   margin: -27px auto;
   border-radius: 28px;
   border: 2px solid #18140f;
-  z-index: 3;
+  z-index: 5;
 }
 section a.divider .leading-arrow:hover {
   transform: scale(1.25);
@@ -1005,7 +1033,7 @@ section a.divider .leading-arrow {
   margin: -27px auto;
   border-radius: 28px;
   border: 2px solid #18140f;
-  z-index: 3;
+  z-index: 5;
 }
 section a.divider .leading-arrow:hover {
   transform: scale(1.25);
@@ -1086,7 +1114,7 @@ html.donate {
 }
 .donate nav.nav-solid {
   background-color: #232323;
-  box-shadow: 1px 1px 5px black;
+  box-shadow: 0px 6px 20px 3px #232323;
 }
 .donate nav.nav-solid li {
   margin-right: 5px;
@@ -1128,7 +1156,7 @@ html.donate {
   cursor: pointer;
   border-left: 5px solid #AE4110;
   padding-right: 10px;
-  box-shadow: 1px 1px 5px black;
+  box-shadow: 0px 6px 20px 3px #232323;
 }
 .donate .schools-by-state .school-filter-bar .row .state-labels a:hover {
   color: #E5DABD;
@@ -1190,7 +1218,7 @@ section a.divider .leading-arrow {
   margin: -27px auto;
   border-radius: 28px;
   border: 2px solid #18140f;
-  z-index: 3;
+  z-index: 5;
 }
 section a.divider .leading-arrow:hover {
   transform: scale(1.25);
@@ -1203,8 +1231,8 @@ section a.divider .leading-arrow:hover {
   background-color: #232323;
 }
 .donate-footer .contact {
-  background-color: #232323;
-  color: #ffffff;
+  background-color: #18140f;
+  color: #9d6a4f;
   padding: 5% 15%;
 }
 @media (min-width: 0px) and (max-width: 600px) {
@@ -1255,7 +1283,7 @@ section a.divider .leading-arrow:hover {
   }
 }
 .donate-footer .contact .grid-col-4 a {
-  color: #ffffff;
+  color: #9d6a4f;
   text-align: center;
   align-self: baseline;
 }
