--- a/less/donate.less
+++ b/less/donate.less
@@ -68,7 +68,7 @@ section a.divider {
     margin: -27px auto;
     border-radius: 28px;
     border: 2px solid @luncher-dark-olive;
-    z-index: 3;
+    z-index: 5;
     &:hover {
       transform: scale(1.25);
       transition-duration: 0.5s;
@@ -85,8 +85,8 @@ section a.divider {
   background-color: @dark;
 
   .contact {
-    background-color: @dark;
-    color: @white;
+    background-color: @luncher-dark-olive;
+    color: @luncher-tan;
     padding: 5% 15%;
     @media @phone {
       padding: 5% 5%;
@@ -123,7 +123,7 @@ section a.divider {
         
       }
       a {
-        color: @white;
+        color: @luncher-tan;
         text-align: center;
         align-self: baseline;
         &:hover {
