--- a/less/global.less
+++ b/less/global.less
@@ -1,7 +1,7 @@
 // General Styles
 * { box-sizing: border-box; }
 
-html { font-size: 62.5%;  scroll-behavior: smooth; }
+html { font-size: 62.5%;  scroll-behavior: smooth; overflow-x: hidden; }
 
 html, body {
   .font-body;
@@ -76,5 +76,9 @@ p {
 .centered {
   float: none;
   margin: 0 auto;
+}
+
+.display-none {
+  display: none;
 }
 
