--- a/css/index.css
+++ b/css/index.css
@@ -514,6 +514,13 @@ section a.divider .leading-arrow:hover {
   grid-template-columns: 10% 80% 10%;
   grid-gap: 50px 0px;
 }
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .luncher-info .grid .icon-slider {
+    grid-template-columns: 100%;
+    grid-template-rows: auto auto;
+    grid-gap: 20px;
+  }
+}
 .home .luncher-info .grid .icon-slider p {
   align-self: center;
 }
@@ -529,6 +536,7 @@ section a.divider .leading-arrow:hover {
   .home .luncher-info .grid .icon-slider .icon-left {
     font-size: 3rem;
     grid-column: 1;
+    grid-row: 1;
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
@@ -549,8 +557,10 @@ section a.divider .leading-arrow:hover {
   .home .luncher-info .grid .icon-slider .text-left {
     font-size: 1.4rem;
     grid-column: 1;
+    grid-row: 2;
     padding-bottom: 20px;
     margin-left: unset;
+    text-align: center;
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
@@ -570,6 +580,7 @@ section a.divider .leading-arrow:hover {
   .home .luncher-info .grid .icon-slider .icon-right {
     font-size: 3rem;
     grid-column: 1;
+    grid-row: 1;
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
@@ -590,8 +601,10 @@ section a.divider .leading-arrow:hover {
   .home .luncher-info .grid .icon-slider .text-right {
     font-size: 1.4rem;
     grid-column: 1;
+    grid-row: 2;
     padding-bottom: 20px;
     margin-left: unset;
+    text-align: center;
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
