--- a/less/home-page.less
+++ b/less/home-page.less
@@ -121,6 +121,11 @@ section a.divider {
         display: grid;
         grid-template-columns: 10% 80% 10%;
         grid-gap: 50px 0px;
+        @media @phone {
+          grid-template-columns: 100%;
+          grid-template-rows: auto auto;
+          grid-gap: 20px;
+        }
         p {
           align-self: center; 
         }
@@ -134,6 +139,7 @@ section a.divider {
           @media @phone { // create a one column grid on 600px and below
             font-size: 3rem;
             grid-column: 1;
+            grid-row: 1;
           }
           @media @medium { font-size: 4rem; }
         }
@@ -148,8 +154,10 @@ section a.divider {
           @media @phone { // create a one column grid on 600px and below
             font-size: 1.4rem;
             grid-column: 1;
+            grid-row: 2;
             padding-bottom: 20px;
             margin-left: unset;
+            text-align: center;
           }
           @media @medium { font-size: 2rem; }
         }
@@ -163,6 +171,7 @@ section a.divider {
           @media @phone { // create a one column grid on 600px and below
             font-size: 3rem;
             grid-column: 1;
+            grid-row: 1;
           }
           @media @medium { font-size: 4rem; }
         }
@@ -177,8 +186,10 @@ section a.divider {
           @media @phone { // create a one column grid on 600px and below
             font-size: 1.4rem;
             grid-column: 1;
+            grid-row: 2;
             padding-bottom: 20px;
             margin-left: unset;
+            text-align: center;
           }
           @media @medium { font-size: 2rem; }
         }
