--- a/css/index.css
+++ b/css/index.css
@@ -234,7 +234,7 @@ nav {
 }
 @media (min-width: 0px) and (max-width: 600px) {
   nav {
-    background-color: #232323;
+    background-color: #18140f;
   }
 }
 nav h1 {
@@ -247,7 +247,6 @@ nav h1 {
 @media (min-width: 0px) and (max-width: 600px) {
   nav h1 {
     font-size: 3rem;
-    width: unset;
   }
 }
 nav h1 a {
@@ -266,12 +265,14 @@ nav ul {
 }
 @media (min-width: 0px) and (max-width: 600px) {
   nav ul {
-    min-width: 160px;
+    min-width: 176px;
   }
 }
 @media (min-width: 0px) and (max-width: 350px) {
   nav ul {
     flex-direction: column;
+    align-items: flex-end;
+    min-width: unset;
   }
 }
 nav ul li {
