--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,7 +14,6 @@ nav {
     width: 100%;
     @media @phone {
       font-size: 3rem;
-      width: unset;
     }
     a {
       text-decoration: none;
@@ -31,10 +30,12 @@ nav {
     justify-content: flex-end;
     min-width: 210px;
     @media @phone {
-      min-width: 160px;
+      min-width: 176px;
     }
     @media @phone-small {
       flex-direction: column;
+      align-items: flex-end;
+      min-width: unset;
     }
     li {
       padding: 5px 0;
