--- a/less/global.less
+++ b/less/global.less
@@ -13,6 +13,7 @@ h1, h2, h3, h4, h5 { .font-title(400); }
 h1 { font-size: 3.6rem; }
 h2 { font-size: 3.2rem; }
 h3 { font-size: 2.8rem; }
+h4 { font-size: 2.2rem; }
 li { font-size: 1.4rem; }
 a { 
   text-decoration: none; 
@@ -60,7 +61,7 @@ p {
 }
 .grid-col-4 {
   display: grid;
-  grid-template-columns: 10% 40% 10% 40%;
+  grid-template-columns: 10% 50% 10% 30%;
   // grid-gap: 10px; // This was causing horiz scrollbar issues
   max-width: 800px;
   margin: 0 auto;
